[gd_scene load_steps=19 format=2]

[ext_resource path="res://data/lvl/INTRO/intro.glb" type="PackedScene" id=1]
[ext_resource path="res://data/STREAM/LOAD/MUDmoLd.wav" type="AudioStream" id=2]
[ext_resource path="res://PROJ/INTRO_MUSIC.gd" type="Script" id=3]
[ext_resource path="res://data/lvl/INTRO/EN/AUDIO/FXMenuSelect.ogg" type="AudioStream" id=4]
[ext_resource path="res://data/lvl/INTRO/gen/props/door.glb" type="PackedScene" id=5]
[ext_resource path="res://data/lvl/INTRO/gen/props/handle.glb" type="PackedScene" id=6]
[ext_resource path="res://data/lvl/INTRO/gen/props/handle2.glb" type="PackedScene" id=7]
[ext_resource path="res://data/lvl/INTRO/gen/intro sprites/press the start button.png" type="Texture" id=8]
[ext_resource path="res://data/lvl/INTRO/gen/intro sprites/tex1_512x256_79e691f0476b02d7_5.png" type="Texture" id=9]
[ext_resource path="res://data/lvl/INTRO/gen/flower/flower_idle2.tscn" type="PackedScene" id=10]
[ext_resource path="res://data/lvl/INTRO/EN/AUDIO/FXMenuMove.ogg" type="AudioStream" id=11]
[ext_resource path="res://PROJ/ptsb_.gd" type="Script" id=12]
[ext_resource path="res://data/lvl/INTRO/gen/intro sprites/intro sprite2.png" type="Texture" id=13]
[ext_resource path="res://PROJ/newGame.gd" type="Script" id=14]
[ext_resource path="res://PROJ/Node2D2.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
resource_name = "black"
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("../Node2D/WorldEnvironment:environment:ambient_light_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Node2D/WorldEnvironment:environment:ambient_light_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Node2D/WorldEnvironment:environment:ambient_light_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Node2D/WorldEnvironment:environment:ambient_light_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="Environment" id=2]
background_mode = 1
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AnimationPlayer/ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("AnimationPlayer/ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("AnimationPlayer/ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "audio"
tracks/4/path = NodePath("FXMenuSel")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Spatial" type="Spatial"]

[node name="intro" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 508.99, 1.628, -316.989 )
far = 40000.0

[node name="INTRO_AUD" type="Node" parent="."]

[node name="INTRO_MUSIC" type="AudioStreamPlayer" parent="INTRO_AUD"]
stream = ExtResource( 2 )
script = ExtResource( 3 )

[node name="DemoWait" type="CanvasLayer" parent="."]

[node name="props" type="Spatial" parent="."]

[node name="handle" parent="props" instance=ExtResource( 6 )]

[node name="door" parent="props" instance=ExtResource( 5 )]

[node name="handle2" parent="props" instance=ExtResource( 7 )]

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
anims/black = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Node2D"]
environment = SubResource( 2 )

[node name="ptsb" type="CanvasLayer" parent="Node2D"]

[node name="Sprite" type="Sprite" parent="Node2D/ptsb"]

[node name="flower_idle2" parent="Node2D/ptsb" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 509.802, 1.56495, -317.004 )
visible = false

[node name="ptsb_" type="Sprite3D" parent="Node2D/ptsb"]
transform = Transform( -2.67101e-09, 0, -0.0611055, 0, 0.0611055, 0, 0.0611055, 0, -2.67101e-09, 509.832, 1.48354, -316.739 )
texture = ExtResource( 8 )
script = ExtResource( 12 )

[node name="FXMenuSel" type="AudioStreamPlayer" parent="Node2D/ptsb"]
stream = ExtResource( 4 )

[node name="FXMenuMov" type="AudioStreamPlayer" parent="Node2D/ptsb"]
stream = ExtResource( 11 )

[node name="SDMM" type="Sprite3D" parent="Node2D/ptsb"]
transform = Transform( -2.14303e-08, 0, -0.490268, 0, 0.688415, 0, 0.490268, 0, -2.14303e-08, 510.577, 1.52987, -316.943 )
texture = ExtResource( 9 )

[node name="newGame" type="Sprite3D" parent="Node2D/ptsb"]
transform = Transform( -3.23347e-09, 0, -0.0739731, 0, 0.0739731, 0, 0.0739731, 0, -3.23347e-09, 509.832, 1.55546, -316.739 )
visible = false
texture = ExtResource( 13 )
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/ptsb"]
anims/black = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Node2D/ptsb/AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.82831
margin_top = -0.353546
margin_right = 2.82837
margin_bottom = -0.353516
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D2" type="Node2D" parent="."]
script = ExtResource( 15 )
